assets/css/style.css
:root {
    --primary-color: #777;
    --secondary-color: #08fdd8;
}

body {
    margin: 0;
    background-color: #1d1d1d;
    color: var(--primary-color);
    font-family: 'Bebas Neue', cursive;
    /* font-family: 'Open Sans', sans-serif; */
    /* font-family: 'Staatliches', cursive; */
   
}

nav {
    color: var(--secondary-color);
    animation: nav-load 500ms;
}

nav ul {
    margin: 0;
    display: flex;
    justify-content: center;
    
}

nav li {
    list-style: none;
    padding: 10px;
    margin: 0 10px;
}

nav li:hover {
    background-color: var(--primary-color);
}

nav a {
    color: inherit;
    text-decoration: none;
}

main {
    width: 100%;
}
  
.hero-top {
    margin: 0 0 0 0;
    padding: 0;
}

h1 {
    font-size: 37vw;
    overflow-x: hidden;
    letter-spacing: -.05em;
    word-wrap: break-word;
    animation-fill-mode: forwards;
    margin: 0;
    padding: 0;
    letter-spacing: -0.05em;
    font-weight: inherit;
    
    
}

.first-name {
    margin: 0 0 -55px 0;
    animation: first-name-load 1.25s 400ms;
    transform: translateX(-100%);
    animation-fill-mode: forwards;

}

.last-name {
    animation: last-name-load 1.25s 400ms;
    transform: translateX(100%);
    animation-fill-mode: forwards;

}






@keyframes nav-load {

    0% {
        transform: translateY(-100%);
    }

    100% {
        transform: translateY(0);
    }


}

@keyframes first-name-load {
    0% {
        transform: translatex(-100%);
    }
    100% {
        transform: translatex(0);
    }
}
  
@keyframes last-name-load {
    0% {
        transform: translatex(100%);
    }
    100% {
        transform: translatex(0);
    }
}
  
  

